[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapyq"
version = "1.0.0"
description = "Scrapyd queue management using Redis."
readme = "README.md"
authors = [
    {name = "slymit", email = "slymit@gmail.com"}
]
maintainers = [
    {name = "slymit", email = "slymit@gmail.com"}
]
license = {text = "BSD"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "scrapyd==1.6.0",
    "redis==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "packaging==26.0",
    "pytest-cov",
    "flake8",
    "mdformat",
]

[project.urls]
Homepage = "https://github.com/slymit/scrapyq"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["tests*", "tests.*"]

[tool.tox]
requires = ["tox>=4.8.0"]
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
allowlist_externals = ["make"]
usedevelop = true
extras = ["dev"]
commands = [
    ["make", "coverage", "ARGS=--cov-report=xml --junitxml=junit.xml -o junit_family=legacy -x -vv"]
]
